tests/test_bool/bad/bad_assert.catala_en
## Test

```catala
declaration scope Foo:
  output x content integer

scope Foo:
  definition x equals 0
  assertion x
```


```catala-test-inline
$ catala Interpret -s Foo
[ERROR]
Error during typechecking, incompatible types:
┌─⯈ integer
└─⯈ bool

Error coming from typechecking the following expression:
┌─⯈ bad_assert.catala_en:9.13-9.14:
└─┐
9 │   assertion x
  │             ‾
  └─ Test

Type integer coming from expression:
┌─⯈ bad_assert.catala_en:5.20-5.27:
└─┐
5 │   output x content integer
  │                    ‾‾‾‾‾‾‾
  └─ Test

Type bool coming from expression:
┌─⯈ bad_assert.catala_en:9.13-9.14:
└─┐
9 │   assertion x
  │             ‾
  └─ Test
#return code 123#
```
